--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-VITE_BASE_URL=/
-
+VITE_BASE_URL=/react-soybean-admin-bug-fix
 VITE_APP_TITLE=SoybeanAdmin
 
 VITE_APP_DESC=SoybeanAdmin is a fresh and elegant admin template
