--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cleanup": "sa cleanup",
     "commit": "sa git-commit",
     "commit:zh": "sa git-commit -l=zh-cn",
+    "deploy": "node createNoJekyll.cjs && node ./node_modules/gh-pages/bin/gh-pages-clean.js && gh-pages -d ./dist --dotfiles",
     "dev": "vite --mode test",
     "dev:prod": "vite --mode prod",
     "gen-route": "sa gen-route",
@@ -66,6 +67,7 @@
     "dayjs": "1.11.13",
     "echarts": "5.5.1",
     "framer-motion": "11.11.1",
+    "gh-pages": "^6.1.1",
     "i18next": "23.15.1",
     "immer": "10.1.1",
     "keepalive-for-react": "2.0.18",
